<resources>
    <string name="app_name">GoLocal</string>
    <string name="brand_title">Go Local!</string>
    <!-- AuthActivity Text -->
    <string name="authActivity_title">Welcome to Go Local!</string>
    <string name="authActivity_action_login">login</string>
    <string name="authActivity_action_register">register</string>
    <string name="authActivity_checkBox_company">I\'m a Store</string>
    <string name="authActivity_checkBox_register">Register as:</string>
    <string name="authActivity_switchRegister_text">Client</string>
    <string name="authActivity_textView_shopSwitchText">Shop</string>
    <string name="authActivity_switch_remember">Remember</string>
    <string name="authActivity_editText_emailHint">Email</string>
    <string name="authActivity_editText_passwordHint">Password</string>
    <string name="authActivity_logo_description">Go Local logo</string>
    <string name="authActivity_btn_login">LOGIN</string>
    <string name="authActivity_btn_register">REGISTER</string>
    <string name="authActivity_textView_enableLocation">Please, enable the location in you\'r device</string>
    <string name="authActivity_textView_gettingLocation">Getting you\'r location, please wait</string>
    <string name="authActivity_textView_knowLocation">We need to know you\'r location to use the app</string>
    <!-- ShopConfigurationActivity Text -->
    <string name="ShopConfigurationActivity_editTextLocation">Adress (With number)</string>
    <string name="ShopConfigurationActivity_textView_number">Number</string>
    <string name="ShopConfigurationActivity_button_changeImage">CHANGE</string>
    <string name="ShopConfigurationActivity_textView_phoneNumber">Phone number</string>
    <string name="ShopConfigurationActivity_checkBox_haveWhatsapp">Have Whatsapp</string>
    <string name="ShopConfigurationActivity_editTextHint_shopName">Shop name</string>
    <string name="ShopConfigurationActivity_textAreaHint_shopDescription">Shop Description</string>
    <string name="ShopConfigurationActivity_button_save">SAVE</string>
    <string name="ShopConfigurationActivity_check_noNumber">No number</string>
    <string name="ShopConfigurationActivity_title">Shop Configuration</string>
    <!-- ClientConfigurationActivity Text -->
    <string name="ClientConfigurationActivity_title">Client Configuration</string>
    <string name="ClientConfigurationActivity_textView_nickName">Nickname:</string>
    <string name="ClientConfigurationActivity_editText_nickName">Nickname</string>
    <string name="ClientConfigurationActivity_btn_save">SAVE</string>
    <!-- Errors -->
    <string name="error_invalid_email">Please check your email.</string>
    <string name="error_email_not_found">This account doesn\'t exists.</string>
    <string name="error_email_already_use">Email already in use.</string>
    <string name="error_wrong_password">Wrong password.</string>
    <string name="error_short_password">Password must be at least %d characters.</string>
    <string name="error_register_generic">Register failed.</string>
    <string name="error_login_generic">Login failed.</string>
    <string name="error_failed_get_privileges">Permission not granted.</string>
    <string name="error_failed_create_post">Permission not granted.</string>
    <!-- API Base URL -->
    <string name="api_base_url">http://jotamarti.ddns.net:30180</string>
    <!-- Backend TAGS -->
    <string name="get_user_usecase">GET_USER_USECASE</string>
    <string name="register_user_usecase">REGISTER_USER_USECASE</string>
    <!-- ShopDetailActivity -->
    <string name="ShopDetailActivity_title">Shop Detail</string>
    <!-- PostDetailActivity -->
    <string name="PostDetailActivity_title">Post Detail</string>
    <string name="PostDetailActivity_btn_visitShop">VISIT SHOP</string>
    <!-- MainActivity -->
    <string name="MainActivity_exitMessage">Are you sure you want to exit?</string>
    <string name="MainActivity_exitMessage_yes">Yes</string>
    <string name="title_activity_new_post">NewPostActivity</string>
    <!-- NewPostActivit -->
    <string name="NewPostActivity_btn_changeImage">CHANGE</string>
    <string name="NewPostActivity_textView_title">Title</string>
    <string name="NewPostActivity_editText_title">Title</string>
    <string name="NewPostActivity_textView_content">Content</string>
    <string name="NewPostActivity_editText_content">Content</string>
    <string name="NewPostActivity_btn_savePost">SAVE</string>
    <string name="NewPostActivity_title">Create Post</string>
    <!-- ShopProfileFragment -->
    <string name="ShopProfileFragment_textView_addressHeader">Address</string>
    <string name="ShopProfileFragment_title">Shop Profile</string>
    <string name="ShopProfileFragment_textView_phoneNumberHeader">Phone number</string>
    <string name="ShopProfileFragment_textView_shopNameHeader">Shop Name</string>
    <string name="ShopProfileFragment_textView_shopDescriptionHeader">Shop Description</string>
    <string name="ShopProfileFragment_btn_createPost">CREATE POST</string>
    <string name="ShopProfileFragment_btn_editShop">EDIT</string>
    <!-- PostsFragment -->
    <string name="PostsFragment_title">Posts List</string>
    <!-- MapsFragment -->
    <string name="MapsFragment_title">Explore Shops</string>
    <!-- ClientProfileFragment -->
    <string name="ClientProfileFragment_title">Client Profile</string>
    <string name="ClientProfileFragment_btn_unsubscribe">UNSUBSCRIBE</string>
    <!-- Navbar -->
    <string name="navbar_map">Map</string>
    <string name="navbar_more">More</string>
    <string name="navbar_posts">Posts</string>
    <!-- Logout Menu -->
    <string name="logoutMenu_logout">Log out</string>
    <string name="logoutMenu_forget">Forget and Log out</string>
    <string name="google_maps_key">AIzaSyDQgLwvtTMV9qlTWU3ET9t-q7eC9J_tNZQ</string>
</resources>